# py-template

./: .gitignore  .pre-commit-config.yaml  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: ci.yaml
src/: __init__.py  main.py
tests/src/: test_main.py
