[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-template"
requires-python = ">=3.13"
version = "0.1.1"
description = ""
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[tool.hatch.build.targets.wheel]
packages = ["./src/"]

# Is this the most recent version?
# What does `pypi.org` say?
dependencies = [
    "pandas==2.2.2"
]

[dependency-groups]
# Don't tag these since they aren't packaged
dev = ["pre-commit", "pytest", "uv"]
