[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "py-template"
requires-python = ">=3.13"
version = "0.1.0"
readme = "README.md"
description = ""
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]

# Is this the most recent version?
# What does `pypi.org` say?
dependencies = [
    "pandas==2.2.2"
]

[dependency-groups]
# Don't tag these since they aren't packaged
dev = ["pre-commit", "pytest", "uv"]
